# nwf-vision

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.sourcecraft/: ci.yaml
docs/: vision.rst
examples/: active_learning.py  ood_cifar_svhn.py  ood_detection.py  split_cifar.py
notebooks/: active_learning.ipynb  ood_cifar_svhn.ipynb  split_cifar.ipynb
src/nwf/vision/: __init__.py  encoders.py
tests/: test_encoders.py
